k8s/clusters/k3sa/manifests/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: share
              mountPath: /audiobooks
              subPath: media/audiobooks
            - name: share
              mountPath: /podcasts
              subPath: media/podcasts
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
          securityContext:
            runAsNonRoot: true
          resources: {}
      volumes:
        - name: share
          nfs:
            server: 10.0.0.2
            path: /volume1/share
            readOnly: false
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
        - name: metadata
          persistentVolumeClaim:
            claimName: metadata-pvc
