k8s/clusters/k3sa/manifests/audiobookshelf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-ingress
  namespace: audiobookshelf
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`audiobookshelf.bigd.no`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: audiobookshelf-service
          port: 80
  tls:
    secretName: bigd-no-tls
